优化 Gallery 用户菜单 UI

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
     "@supabase/supabase-js": "^2.88.0"
+  },
+  "devDependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "get-pixels": "^3.3.3",
+    "quantize": "^1.0.2"
   }
 }
